--- a/app/src/main/res/layout/fragment_details_.xml
+++ b/app/src/main/res/layout/fragment_details_.xml
@@ -5,11 +5,9 @@
     android:background="@color/colorAccent"
     tools:context="com.udacity.stockhawk.ui.DetailsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/placeHolder"
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/chart"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent" />
 
 </FrameLayout>
