finishing arabic language rtl

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,6 +4,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColor">@color/textColor</item>
     </style>
 
     <style name="PercentChangeTextStyle">
@@ -18,6 +19,7 @@
 
     <style name="StockSymbolTextStyle">
         <item name="android:textSize">25sp</item>
+
         <item name="android:textAllCaps">true</item>
     </style>
 </resources>
