--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -13,6 +13,7 @@
         tools:context="com.udacity.stockhawk.ui.MainFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:name="com.udacity.stockhawk.ui.MainFragment"
         android:layout_weight="1" />
 
     <FrameLayout
