--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -10,14 +10,15 @@
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipe_refresh"
         android:layout_width="match_parent"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
         android:layout_height="match_parent">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin" />
+            />
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
@@ -33,7 +34,7 @@
         android:layout_alignParentRight="true"
         android:src="@drawable/fab_plus"
         android:contentDescription="@string/addBtnDescription"
-        app:backgroundTint="@color/material_blue_500"
+        app:backgroundTint="#4FC3F7"
         app:borderWidth="0dp"
         app:elevation="6dp"
         app:fabSize="normal"
