--- a/app/src/main/res/layout/list_item_quote.xml
+++ b/app/src/main/res/layout/list_item_quote.xml
@@ -5,6 +5,7 @@
     android:layout_height="?android:attr/listPreferredItemHeight"
     android:gravity="center_vertical"
     android:orientation="horizontal"
+    android:background="@drawable/list_item_selector"
     android:paddingLeft="16dp"
     android:paddingRight="16dp">
 
