--- a/app/src/main/res/layout/stocks_widget.xml
+++ b/app/src/main/res/layout/stocks_widget.xml
@@ -1,11 +1,23 @@
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#09C"
-    android:padding="@dimen/widget_margin">
-    <ListView
 
+    android:padding="@dimen/widget_margin"
+    android:orientation="vertical"
+    >
+    <!--android:background="@android:color/transparent" -->
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:text="Stock Hawk"
+        android:textSize="14sp"
+        android:gravity="center"
+        android:background="@color/colorPrimary"
+        android:textColor="@color/textColor"
+        />
+    <ListView
+        android:background="@color/semiTransparentColorPrimary"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
@@ -21,4 +33,4 @@
             android:text="@string/empty_widget_text"
             android:layout_height="wrap_content" />
     </RelativeLayout>
-</FrameLayout>
+</LinearLayout>
