fixed network issues.

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -40,10 +40,10 @@
         app:fabSize="normal"
         app:pressedTranslationZ="12dp" />
 
-    <TextView
+    <android.support.v7.widget.AppCompatImageView
         android:id="@+id/error"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="center"
         android:textAppearance="@android:style/TextAppearance.Medium"
         android:visibility="gone"
